Fixed issues in crystal-h2o, swift-nio and java lang implementations [docker_verify]